<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30dp"
    android:layout_marginTop="50dp"
    android:background="@color/backgroundColor"
    android:paddingHorizontal="30dp"
    android:paddingVertical="20dp"
    android:theme="@style/introductionStyle"
    tools:ignore="Overdraw">


    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="40dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColorHint="@color/whiteColor"
        app:errorEnabled="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateAccount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:lines="1"
            android:hint="@string/name"
            android:textColor="@color/whiteColor"
            android:textColorHint="@color/whiteColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/gender"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <ToggleButton
        android:id="@+id/tbGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/darkTextColor"
        android:padding="0dp"
        android:textOff="@string/male"
        android:textOn="@string/female"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvGender"
        app:layout_constraintStart_toEndOf="@+id/tvGender"
        app:layout_constraintTop_toTopOf="@+id/tvGender" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button_next_enabled"
        android:text="@string/create"
        android:textColor="@color/darkTextColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbGender" />

</androidx.constraintlayout.widget.ConstraintLayout>