<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="addPersonalDataViewModel"
            type="hu.droth.kristof.mindlearning.view.authentication.fragments.AddPersonalDataViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:theme="@style/introductionStyle"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/horizontalPadding"
            android:paddingVertical="@dimen/topPadding">

            <TextView
                android:id="@+id/tvCreateAccount"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:autoSizeTextType="uniform"
                android:text="@string/create_account"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_icon_create_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCreateAccount" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textColorHint="@color/whiteColor"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@={addPersonalDataViewModel.currentPLayerName}"
                    android:textColor="@color/whiteColor"
                    android:textColorHint="@color/whiteColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/gender"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <ToggleButton
                android:id="@+id/tbGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/darkTextColor"
                android:checked="@={addPersonalDataViewModel.isGenderFemale()}"
                android:padding="0dp"
                android:textOff="@string/male"
                android:textOn="@string/female"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvGender"
                app:layout_constraintStart_toEndOf="@+id/tvGender"
                app:layout_constraintTop_toTopOf="@+id/tvGender" />

            <Button
                android:id="@+id/btnCreate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button_next_enabled"
                android:onClick="@{() ->addPersonalDataViewModel.onCreateButtonClick()}"
                android:text="@string/create"
                android:textColor="@color/darkTextColor"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{addPersonalDataViewModel.shouldProgressbarVisible ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toTopOf="@+id/btnCreate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tbGender" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>