<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        android:paddingHorizontal="@dimen/horizontalPadding"
        android:paddingVertical="@dimen/topPadding"
        android:theme="@style/introductionStyle"
        tools:context=".view.introduction.fragments.IntroductionBaseFragment"
        tools:viewBindingIgnore="true">


        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:backgroundTint="@color/transparentColor"
            android:scaleType="centerInside"
            android:src="@drawable/icon_back"
            android:contentDescription="@string/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSkip"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/rounded_button_skip"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvWelcomeMindlearning"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_below="@+id/btnSkip"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:autoSizeTextType="uniform"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSkip" />


        <TextView
            android:id="@+id/tvExploreUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvWelcomeMindlearning"
            android:layout_marginTop="10dp"
            android:text="@string/explore_us"
            android:textSize="20sp"
            android:maxLines="1"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcomeMindlearning" />

        <ImageView
            android:id="@+id/ivMainImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/introduction_image"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvExploreUs" />

        <TextView
            android:id="@+id/tvImageDescription"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_below="@id/ivMainImage"
            android:layout_marginTop="8dp"
            android:autoSizeTextType="uniform"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivMainImage" />

        <ProgressBar
            android:id="@+id/progressBarGameVisual"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/transparentColor"
            android:max="100"
            android:progressTint="@color/darkTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvImageDescription"
            app:layout_constraintWidth_percent="0.2" />


        <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button_next_enabled"
            android:text="@string/next"
            android:textColor="@color/darkTextColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBarGameVisual"
            app:layout_constraintWidth_percent="0.6" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
